--- a/public/en/contact.html
+++ b/public/en/contact.html
@@ -18,7 +18,7 @@
                 <a href="./index.html" class="e-logo"><strong>CITIZEN</strong> BUDGET</a>
                 <div class="e-menu-right">
                     <a href="http://budgetcitoyen.com/" class="e-link m-french">FR</a>
-                    <a href="http://www.opennorth.ca/" class="e-link m-open-north" target="_blank" title="Open North Website"><img src="images/open-north-icon-header.png" alt="Open North logo"></a>
+                    <a href="https://ethelo.com/" class="e-link m-open-north" target="_blank" title="Ethelo website"><img src="images/ethelo-icon-header.png" alt="Ethelo logo"></a>
                 </div>
 
                 <a href="./index.html#about" class="e-link">About</a>
@@ -34,16 +34,16 @@
     <div class="b-contact">
         <div class="b-wrapper">
             <h2>Contact</h2>
-            <h3>1-888-750-4980<br/>info@opennorth.ca</h3>
+            <br/>citizenbudget@ethelo.com</h3>
             <p>Contact us to find out how Citizen Budget can transform your budget consultations.<br/>We'll respond to you immediately!</p>
-            <form method="POST" action="https://formspree.io/info@opennorth.ca">
+            <!-- <form method="POST" action="https://formspree.io/info@opennorth.ca">
                 <input type="text" name="name" placeholder="Name*" required/>
                 <input type="email" name="email" placeholder="Email*" required/>
                 <input type="text" name="phone" placeholder="Phone"/>
                 <input type="text" name="organization" placeholder="Organization*" required/>
                 <textarea name="message" placeholder="Message"></textarea>
                 <input type="submit" class="b-button" value="Send">
-            </form>
+            </form>-->
         </div>
     </div>
 
@@ -63,14 +63,14 @@
                 </div>
 
                 <div class="b-one-third e-footer-column m-about">
-                    <h3>Developed by</h3>
-                    <p>Citizen Budget is a product <br>of <strong>Open North</strong>, a not-for-profit, social enterprise that specializes in the development of innovative online tools that promote greater government transparency and citizen participation.</p>
+                    <h3>Provided by</h3>
+                    <p>Citizen Budget is a product <br>of <strong>Ethelo</strong>, a Canadian social enterprise that specializes in providing online engagement tools to promote participatory democracy</p>
                 </div>
 
                 <div class="b-one-third e-footer-column m-contact">
                     <h3>Contact</h3>
-                    <a href="./contact.html">info@opennorth.ca</a>
-                    <a href="tel://1-888-750-4980">1-888-750-4980</a>
+                    <a href="./contact.html">citizenbudget@ethelo.com</a>
+                    <!-- <a href="tel://add new phone number">new phone number</a> -->
                 </div>
             </div>
         </footer>
