--- a/contact.html
+++ b/contact.html
@@ -18,7 +18,7 @@
                 <a href="./index.html" class="e-logo"><strong>CITIZEN</strong> BUDGET</a>
                 <div class="e-menu-right">
                     <a href="http://budgetcitoyen.com/" class="e-link m-french">FR</a>
-                    <a href="http://www.opennorth.ca/" class="e-link m-open-north" target="_blank" title="Open North Website"><img src="images/open-north-icon-header.png" alt="Open North logo"></a>
+                    <a href="https://ethelo.com/" class="e-link m-open-north" target="_blank" title="Ethelo website"><img src="images/ethelo-icon-header.png" alt="Ethelo logo"></a>
                 </div>
 
                 <a href="./index.html#about" class="e-link">About</a>
